// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A snapshot of a populated cell 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="button"
    accessible={true}
    collapsable={false}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#fefefe",
        "borderColor": "#aaa",
        "borderRadius": 11.689499898810462,
        "borderWidth": 1.054057700523937,
        "elevation": 0,
        "flexDirection": "row",
        "height": 35.06849969643139,
        "justifyContent": "center",
        "width": 35.06849969643139,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#aaa",
            "display": "flex",
            "fontSize": 18.914011378201526,
          }
        }
      >
        2
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <Text
        style={
          Object {
            "bottom": 7.224511479391065,
            "color": "#aaa",
            "display": "flex",
            "fontSize": 11.689499898810462,
            "left": 7.224511479391065,
          }
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`A snapshot of an active cell 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="button"
    accessible={true}
    collapsable={false}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#323031",
        "borderColor": "#323031",
        "borderRadius": 11.689499898810462,
        "borderWidth": 1.054057700523937,
        "elevation": 1.7054653594477303,
        "flexDirection": "row",
        "height": 35.06849969643139,
        "justifyContent": "center",
        "width": 35.06849969643139,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#fefefe",
            "display": "flex",
            "fontSize": 18.914011378201526,
          }
        }
      >
        2
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <Text
        style={
          Object {
            "bottom": 7.224511479391065,
            "color": "#fefefe",
            "display": "flex",
            "fontSize": 11.689499898810462,
            "left": 7.224511479391065,
          }
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`A snapshot of an empty cell 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessible={false}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#fefefe",
        "borderColor": "#aaa",
        "borderRadius": 11.689499898810462,
        "borderWidth": 0,
        "elevation": 0,
        "flexDirection": "row",
        "height": 35.06849969643139,
        "justifyContent": "center",
        "width": 35.06849969643139,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#fefefe",
          "borderColor": "#aaa",
          "borderRadius": 11.689499898810462,
          "borderWidth": 0,
          "elevation": 0,
          "flexDirection": "row",
          "height": 35.06849969643139,
          "justifyContent": "center",
          "width": 35.06849969643139,
        }
      }
    />
  </View>
</View>
`;

exports[`A snapshot of an inactive cell in Explore mode 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="button"
    accessible={true}
    collapsable={false}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#fefefe",
        "borderColor": "#aaa",
        "borderRadius": 11.689499898810462,
        "borderWidth": 1.054057700523937,
        "elevation": 0,
        "flexDirection": "row",
        "height": 35.06849969643139,
        "justifyContent": "center",
        "width": 35.06849969643139,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#aaa",
            "display": "flex",
            "fontSize": 18.914011378201526,
          }
        }
      >
        2
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <Text
        style={
          Object {
            "bottom": 7.224511479391065,
            "color": "#aaa",
            "display": "flex",
            "fontSize": 11.689499898810462,
            "left": 7.224511479391065,
          }
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`A snapshot of an inactive cell in Quiz mode 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="button"
    accessible={true}
    collapsable={false}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#fefefe",
        "borderColor": "#aaa",
        "borderRadius": 11.689499898810462,
        "borderWidth": 1.054057700523937,
        "elevation": 0,
        "flexDirection": "row",
        "height": 35.06849969643139,
        "justifyContent": "center",
        "width": 35.06849969643139,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#aaa",
            "display": "none",
            "fontSize": 18.914011378201526,
          }
        }
      >
        2
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <Text
        style={
          Object {
            "bottom": 7.224511479391065,
            "color": "#aaa",
            "display": "none",
            "fontSize": 11.689499898810462,
            "left": 7.224511479391065,
          }
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;
